@@ -1,4 +1,4 @@
-/*	Copyright (C) 1995, 1996, 1997, 1998, 1999, 2000 Free Software Foundation, Inc.
+/*	Copyright (C) 1995, 1996, 1997, 1998, 1999, 2000, 2001 Free Software Foundation, Inc.
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -43,6 +43,8 @@
 /* $Id$ */
 
 /* Cooperative thread library, based on QuickThreads */
+
+#include <stdio.h>
 
 #ifdef HAVE_UNISTD_H 
 #include <unistd.h>
